microservice security is implemented with jwt in all services via identity server

--- a/Services/Catalog/MicroserviceECommerce.Catalog.WebAPI/appsettings.json
+++ b/Services/Catalog/MicroserviceECommerce.Catalog.WebAPI/appsettings.json
@@ -20,5 +20,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServerURL": "https://localhost:5001"
 }
