--- a/Services/Order/Presentation/MicroserviceECommerce.Order.WebAPI/appsettings.json
+++ b/Services/Order/Presentation/MicroserviceECommerce.Order.WebAPI/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServerURL": "https://localhost:5001"
+
 }
