--- a/Services/Catalog/MicroserviceECommerce.Catalog.WebAPI/MicroserviceECommerce.Catalog.WebAPI.csproj
+++ b/Services/Catalog/MicroserviceECommerce.Catalog.WebAPI/MicroserviceECommerce.Catalog.WebAPI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     <PackageReference Include="MongoDB.Bson" Version="3.5.2" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.30.0" />
