--- a/Services/Catalog/MicroserviceECommerce.Catalog.WebAPI/Properties/launchSettings.json
+++ b/Services/Catalog/MicroserviceECommerce.Catalog.WebAPI/Properties/launchSettings.json
@@ -22,9 +22,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7249;http://localhost:5130",
+      "applicationUrl": "https://localhost:7070",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
