--- a/Services/Discount/MicroserviceECommerce.Discount.WebAPI/Properties/launchSettings.json
+++ b/Services/Discount/MicroserviceECommerce.Discount.WebAPI/Properties/launchSettings.json
@@ -22,9 +22,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7099;http://localhost:5165",
+      "applicationUrl": "https://localhost:7071",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
