--- a/Services/Discount/MicroserviceECommerce.Discount.WebAPI/appsettings.json
+++ b/Services/Discount/MicroserviceECommerce.Discount.WebAPI/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServerURL": "https://localhost:5001"
 }
