--- a/Services/Order/Presentation/MicroserviceECommerce.Order.WebAPI/MicroserviceECommerce.Order.WebAPI.csproj
+++ b/Services/Order/Presentation/MicroserviceECommerce.Order.WebAPI/MicroserviceECommerce.Order.WebAPI.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.22">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
