--- a/Services/Order/Presentation/MicroserviceECommerce.Order.WebAPI/Properties/launchSettings.json
+++ b/Services/Order/Presentation/MicroserviceECommerce.Order.WebAPI/Properties/launchSettings.json
@@ -22,9 +22,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7032;http://localhost:5093",
+      "applicationUrl": "https://localhost:7072",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
