--- a/ApiGateway/MicroserviceECommerce.OcelotGateway/appsettings.json
+++ b/ApiGateway/MicroserviceECommerce.OcelotGateway/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServerURL": "https://localhost:5001"
+
 }
